<resources>

    <string name="app_name">斗鱼TV</string>
    <string name="app_search">搜索</string>
    <string name="app_recommend">推荐</string>
    <string name="app_game">游戏</string>
    <string name="app_live">直播</string>
    <string name="app_more">更多</string>
    <string name="app_room">直播间</string>
    <string name="app_login">登录</string>
    <string name="app_follow">我的关注</string>
    <string name="app_forgot">忘记密码</string>
    <string name="app_history">观看历史</string>
    <string name="app_mission">我的任务</string>
    <string name="app_advertise">精彩推荐</string>
    <string name="app_setting">系统设置</string>
    <string name="app_profile">个人信息</string>
    <string name="app_register">注册</string>
    <string name="app_update">检车更新</string>
    <string name="app_feedback">意见反馈</string>
    <string name="app_about">关于我们</string>
    <string name="app_exit">再按一次返回键退出</string>
    <string name="app_ok">确认</string>
    <string name="app_cancel">取消</string>

    <string name="aboutus_website">官方网站：</string>
    <string name="aboutus_website_url">http://www.douyutv.com</string>
    <string name="aboutus_sina">新浪微博：</string>
    <string name="aboutus_sina_url">http://weibo.com/douyu2014</string>
    <string name="aboutus_tencent">腾讯微薄：</string>
    <string name="aboutus_tencent_url">http://e.t.qq.com/douyutv</string>

    <string name="connection_failure">连接失败，请重试！</string>

    <string name="advertise_download">下载</string>
    <string name="advertise_downloaded">已下载</string>
    <string name="advertise_sending">正在与服务器通讯 …</string>
    <string name="advertise_send_failure">与服务器通讯失败，请重试！</string>

    <string name="bind_mail">绑定邮箱地址</string>
    <string name="bind_mail_input">输入邮箱地址</string>
    <string name="bind_mail_empty">邮箱地址不能为空！</string>
    <string name="bind_mail_wrong">邮箱地址不正确，请重新输入！</string>
    <string name="bind_mail_send">发送验证邮件</string>
    <string name="bind_mail_sending">正在发送 …</string>
    <string name="bind_mail_success">发送成功，请查收验证邮件！</string>
    <string name="bind_mail_failure">发送失败！</string>
    <string name="bind_phone">绑定手机号码</string>
    <string name="bind_phone_domestic">国内手机</string>
    <string name="bind_phone_domestic_code_hint">请输入正确的11位手机号码</string>
    <string name="bind_phone_domestic_code_sent">验证码已发送</string>
    <string name="bind_phone_domestic_code_desc">获取验证码不会对您产生任何费用</string>
    <string name="bind_foreign">国外手机</string>
    <string name="bind_foreign_step1">第一步</string>
    <string name="bind_foreign_step1_desc">发送短信：douyutv\n至号码：+8614782267273</string>
    <string name="bind_foreign_step2">第二步</string>
    <string name="bind_phone_input">输入手机号码</string>
    <string name="bind_phone_empty">手机号码不能为空！</string>
    <string name="bind_phone_wrong">手机号码不正确，请重新输入！</string>
    <string name="bind_phone_failure">校验失败！</string>
    <string name="bind_phone_submit">绑定</string>
    <string name="bind_phone_submitting">正在绑定 …</string>
    <string name="bind_qq">绑定QQ号码</string>
    <string name="bind_qq_input">输入QQ号码</string>
    <string name="bind_qq_empty">QQ号码不能为空！</string>
    <string name="bind_qq_submit">绑定</string>
    <string name="bind_qq_submitting">正在绑定 …</string>
    <string name="bind_qq_success">绑定成功！</string>
    <string name="bind_qq_failure">绑定失败！</string>
    <string name="bind_captcha_input">输入校验码</string>
    <string name="bind_captcha_empty">校验码不能为空！</string>
    <string name="bind_captcha_wrong">校验码不正确，请重新输入！</string>
    <string name="bind_code_input">输入验证码</string>
    <string name="bind_code_via_mail">短信验证</string>
    <string name="bind_code_via_voice">语音验证</string>
    <string name="bind_code_empty">验证码不能为空！</string>
    <string name="bind_code_wrong">验证码不正确，请重新输入！</string>
    <string name="bind_retry">重试(%s)</string>
    <string name="bind_success">绑定成功！</string>
    <string name="bind_failure">绑定失败！</string>

    <string name="feedback_title">输入反馈标题</string>
    <string name="feedback_title_empty">标题不能为空！</string>
    <string name="feedback_content">输入反馈内容</string>
    <string name="feedback_content_empty">内容不能为空！</string>
    <string name="feedback_submit">提交</string>
    <string name="feedback_submit_failure">提交失败，请重试！</string>
    <string name="feedback_submit_success">提交成功，感谢您的支持！</string>

    <string name="forgot_submitted">已提交申请！</string>

    <string name="login_username">账号</string>
    <string name="login_username_empty">账号不能为空！</string>
    <string name="login_password">密码</string>
    <string name="login_password_empty">密码不能为空！</string>
    <string name="login_submit">登录</string>
    <string name="login_submitting">正在登录 …</string>
    <string name="login_success">登录成功！</string>
    <string name="login_failure">登录失败！</string>
    <string name="login_register">注册账号</string>
    <string name="login_forgot">忘记密码？</string>
    <string name="login_other">其他登录方式</string>
    <string name="login_unauthorized">需要登录才能继续，是否现在登录？</string>
    <string name="login_authorize_expired">身份验证过期，请重新登录！</string>
    <string name="login_validating">正在验证 …</string>

    <string name="login_required">只有登录用户才能发送弹幕！</string>
    <string name="logout_sure">确认注销？</string>

    <string name="more_login">点击登录</string>
    <string name="more_weight">鱼丸</string>
    <string name="more_follow">关注</string>
    <string name="more_checkin">签到</string>

    <string name="media_error_server">无法获得服务器信息，请重试！</string>
    <string name="media_error_network">无法打开直播流，请重试！</string>
    <string name="media_completion">直播流已结束！</string>

    <string name="player_definition">切换清晰度</string>
    <string name="player_definition_ws">线路1</string>
    <string name="player_definition_lx">线路2</string>
    <string name="player_definition_hd">超清</string>
    <string name="player_definition_sd">标清</string>
    <string name="player_live">直播列表</string>
    <string name="player_input">在此输入弹幕 …</string>
    <string name="player_hotwords">热词</string>
    <string name="player_send">发送</string>
    <string name="player_yuwan_send">赠送鱼丸</string>
    <string name="player_yuwan_sending">赠送中 …</string>
    <string name="player_cancel">取消</string>
    <string name="player_screen_brightness">屏幕亮度</string>
    <string name="player_danmaku_opacity">弹幕透明度</string>
    <string name="player_danmaku_density">弹幕密度</string>
    <string name="player_danmaku_density_low">较低</string>
    <string name="player_danmaku_density_middle">中等</string>
    <string name="player_danmaku_density_high">较高</string>
    <string name="player_danmaku_density_unlimited">不限</string>
    <string name="player_danmaku_size">弹幕大小</string>
    <string name="player_danmaku_size_low">较小</string>
    <string name="player_danmaku_size_normal">普通</string>
    <string name="player_danmaku_size_high">较大</string>
    <string name="player_danmaku_size_huge">巨大</string>
    <string name="player_screen_ratio">屏幕比例</string>
    <string name="player_screen_ratio_16x9">16:9</string>
    <string name="player_screen_ratio_4x3">4:3</string>
    <string name="player_screen_ratio_auto">自动</string>
    <string name="player_screen_ratio_fullscreen">全屏</string>

    <string name="profile_weight">鱼丸</string>
    <string name="profile_follow">关注</string>
    <string name="profile_mail">邮箱</string>
    <string name="profile_phone">手机</string>
    <string name="profile_qq">QQ</string>
    <string name="profile_bind">立刻绑定</string>
    <string name="profile_logout">注销</string>

    <string name="register_username">输入账户名</string>
    <string name="register_mail">输入邮箱</string>
    <string name="register_password">输入密码</string>
    <string name="register_password_again">再次输入密码</string>
    <string name="register_submit">注册</string>
    <string name="register_success">注册成功！</string>

    <string name="room_online">在线：%s</string>
    <string name="room_follow">关注：%s</string>
    <string name="room_share">分享</string>
    <string name="room_notice">公告</string>
    <string name="room_follow_adding">正在添加关注 …</string>
    <string name="room_follow_add_success">添加关注成功！</string>
    <string name="room_follow_add_failure">添加关注失败！</string>
    <string name="room_follow_removing">正在移除关注 …</string>
    <string name="room_follow_remove_success">移除关注成功！</string>
    <string name="room_follow_remove_failure">移除关注失败！</string>
    <string name="room_play">播放</string>
    <string name="room_play_sure">您目前正在使用移动网络流量，确认播放直播？</string>

    <string name="search_clear">清除搜索记录</string>
    <string name="search_clear_sure">确认清除搜索记录？</string>
    <string name="search_hint">输入搜索内容</string>
    <string name="search_action">搜索</string>
    <string name="search_empty">搜索内容不能为空！</string>
    <string name="search_tooshort">搜索内容过短！</string>
    <string name="search_result">搜索结果</string>
    <string name="search_status_online">已开播</string>
    <string name="search_status_offline">未开播</string>

    <string name="setting_system">系统设置</string>
    <string name="setting_system_auto_load_more">列表自动加载</string>
    <string name="setting_system_show_empty_category">展示全部分类</string>
    <string name="setting_system_receive_push">消息推送</string>
    <string name="setting_system_play_video_under_mobile_network">2G/3G播放视频</string>
    <string name="setting_system_switch_decode">硬件/软件解码</string>
    <string name="setting_system_switch_decode_hw">硬件解码</string>
    <string name="setting_system_switch_decode_sw">软件解码</string>
    <string name="setting_live">直播设置</string>
    <string name="setting_live_player_gesture">播放器手势</string>
    <string name="setting_live_danmaku_opacity">弹幕透明度</string>
    <string name="setting_live_danmaku_size">弹幕大小</string>
    <string name="setting_live_danmaku_location">弹幕位置</string>
    <string name="setting_live_danmaku_location_top">顶部</string>
    <string name="setting_live_danmaku_location_bottom">底部</string>
    <string name="setting_live_danmaku_location_fullscreen">全屏</string>
    <string name="setting_support">服务支持</string>
    <string name="setting_support_check_update">检查更新</string>
    <string name="setting_support_check_update_available">发现新版本</string>
    <string name="setting_support_check_update_notavailable">发现新版本</string>
    <string name="setting_support_check_update_version">新版本号：</string>
    <string name="setting_support_check_update_content">更新内容：</string>
    <string name="setting_support_check_update_size">文件大小：</string>
    <string name="setting_support_check_update_failure">无法获得更新信息，请重试！</string>
    <string name="setting_support_feedback">意见反馈</string>
    <string name="setting_support_about_us">关于我们</string>

</resources>
