<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/player_control_setting"
    style="@style/mm"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <View
        android:id="@+id/player_control_setting_mask"
        style="@style/mm"
        android:background="@color/mask"/>

    <LinearLayout
        android:id="@+id/player_control_setting_overlay"
        style="@style/mm.v"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_corner_transparentdarkgray"
        android:clickable="true">

        <LinearLayout
            style="@style/mww.h"
            android:gravity="center_vertical"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/player_screen_brightness"
                android:textColor="@color/white"
                android:textSize="@dimen/Subhead"/>

            <SeekBar
                android:id="@+id/player_screen_brightness"
                style="@style/mw"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:max="217"
                android:maxHeight="2dp"
                android:progress="217"
                android:progressDrawable="@drawable/layer_seekbar_orange"
                android:thumb="@drawable/shape_seekbar_thumb_orange"/>

        </LinearLayout>

        <LinearLayout
            style="@style/mww.h"
            android:gravity="center_vertical"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/player_danmaku_opacity"
                android:textColor="@color/white"
                android:textSize="@dimen/Subhead"/>

            <SeekBar
                android:id="@+id/player_danmaku_opacity"
                style="@style/mw"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:max="217"
                android:maxHeight="2dp"
                android:progress="217"
                android:progressDrawable="@drawable/layer_seekbar_orange"
                android:thumb="@drawable/shape_seekbar_thumb_orange"/>

        </LinearLayout>

        <LinearLayout
            style="@style/mww.h"
            android:gravity="center_vertical"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/player_danmaku_density"
                android:textColor="@color/white"
                android:textSize="@dimen/Subhead"/>

            <RadioGroup
                android:id="@+id/player_danmaku_density"
                style="@style/mw.h"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <RadioButton
                    android:id="@+id/player_danmaku_density_low"
                    style="@style/mww"
                    android:background="@drawable/selector_tab"
                    android:button="@drawable/selector_compoundbutton"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/player_danmaku_density_low"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Subhead"/>

                <RadioButton
                    android:id="@+id/player_danmaku_density_middle"
                    style="@style/mww"
                    android:background="@drawable/selector_tab"
                    android:button="@drawable/selector_compoundbutton"
                    android:checked="true"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/player_danmaku_density_middle"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Subhead"/>

                <RadioButton
                    android:id="@+id/player_danmaku_density_high"
                    style="@style/mww"
                    android:background="@drawable/selector_tab"
                    android:button="@drawable/selector_compoundbutton"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/player_danmaku_density_high"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Subhead"/>

                <RadioButton
                    android:id="@+id/player_danmaku_density_unlimited"
                    style="@style/mww"
                    android:background="@drawable/selector_tab"
                    android:button="@drawable/selector_compoundbutton"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/player_danmaku_density_unlimited"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Subhead"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/mww.h"
            android:gravity="center_vertical"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/player_danmaku_size"
                android:textColor="@color/white"
                android:textSize="@dimen/Subhead"/>

            <RadioGroup
                android:id="@+id/player_danmaku_size"
                style="@style/mw.h"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <RadioButton
                    android:id="@+id/player_danmaku_size_small"
                    style="@style/mww"
                    android:background="@drawable/selector_tab"
                    android:button="@drawable/selector_compoundbutton"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/player_danmaku_size_low"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Subhead"/>

                <RadioButton
                    android:id="@+id/player_danmaku_size_normal"
                    style="@style/mww"
                    android:background="@drawable/selector_tab"
                    android:button="@drawable/selector_compoundbutton"
                    android:checked="true"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/player_danmaku_size_normal"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Subhead"/>

                <RadioButton
                    android:id="@+id/player_danmaku_size_large"
                    style="@style/mww"
                    android:background="@drawable/selector_tab"
                    android:button="@drawable/selector_compoundbutton"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/player_danmaku_size_high"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Subhead"/>

                <RadioButton
                    android:id="@+id/player_danmaku_size_huge"
                    style="@style/mww"
                    android:background="@drawable/selector_tab"
                    android:button="@drawable/selector_compoundbutton"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/player_danmaku_size_huge"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Subhead"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/mww.h"
            android:gravity="center_vertical"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <TextView
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/player_screen_ratio"
                android:textColor="@color/white"
                android:textSize="@dimen/Subhead"/>

            <RadioGroup
                android:id="@+id/player_screen_ratio"
                style="@style/mw.h"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <RadioButton
                    android:id="@+id/player_screen_ratio_16x9"
                    style="@style/mww"
                    android:background="@drawable/selector_tab"
                    android:button="@drawable/selector_compoundbutton"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/player_screen_ratio_16x9"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Subhead"/>

                <RadioButton
                    android:id="@+id/player_screen_ratio_4x3"
                    style="@style/mww"
                    android:background="@drawable/selector_tab"
                    android:button="@drawable/selector_compoundbutton"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/player_screen_ratio_4x3"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Subhead"/>

                <RadioButton
                    android:id="@+id/player_screen_ratio_auto"
                    style="@style/mww"
                    android:background="@drawable/selector_tab"
                    android:button="@drawable/selector_compoundbutton"
                    android:checked="true"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/player_screen_ratio_auto"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Subhead"/>

                <RadioButton
                    android:id="@+id/player_screen_ratio_fullscreen"
                    style="@style/mww"
                    android:background="@drawable/selector_tab"
                    android:button="@drawable/selector_compoundbutton"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/player_screen_ratio_fullscreen"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Subhead"/>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>