<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/mm.v"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_solid"
        style="@style/mw"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:elevation="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="?attr/actionBarPopupTheme"
        app:theme="?attr/actionBarTheme">

        <EditText
            android:id="@+id/feedback_title_input"
            style="@style/mm"
            android:background="@color/transparent"
            android:hint="@string/feedback_title"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/transparentWhite"
            android:textSize="@dimen/Subhead"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        style="@style/mm.v"
        android:padding="8dp">

        <EditText
            android:id="@+id/feedback_content_input"
            style="@style/mmw"
            android:background="@color/transparent"
            android:gravity="top|left"
            android:hint="@string/feedback_content"
            android:textAppearance="@style/Body1"/>

        <android.support.v7.widget.CardView
            style="@style/mw"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="?attr/colorPrimary">

            <TextView
                android:id="@+id/feedback_submit"
                style="@style/mw"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/feedback_submit"
                android:textColor="@color/white"
                android:textSize="@dimen/Body1"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>